Clean metadata copy.